--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^1.7.4",
     "keen-slider": "^6.8.6",
     "next": "14.2.5",
     "react": "^18",
